bugfix: make spacing between horizontal menu elements relative to font size

--- a/widgets.css
+++ b/widgets.css
@@ -211,7 +211,7 @@ ul.menu img {
 
 /* Styles the orientation of the menu */
 ul.menu.horizontal li { 
-    margin: 0px 5px;
+    margin: 0px 0.5em;
     float: left;
 }
 ul.menu.horizontal li a { 
